--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Titillium+Web:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 html {
     scroll-behavior: smooth;
 }
@@ -136,6 +139,7 @@ html {
 
 #about img {
     width: 400px;
+    box-shadow: 2px 3px 5px black;
     border-radius: 20%;
     margin-top: -200px;
     margin-left: 680px;
@@ -143,6 +147,7 @@ html {
 }
 
 .sec {
+    /* border: 2px solid black; */
     display: flex;
     margin: auto;
     margin-top: 50px;
@@ -151,7 +156,10 @@ html {
 }
 
 .sec1 {
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    box-shadow: 2px 2px 5px black;
+    margin: 5px;
+    border-radius: 5%;
     background-image: url(monument.jpg);
     background-size: cover;
     width: 33.34%;
@@ -159,15 +167,21 @@ html {
 }
 
 .sec2 {
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    box-shadow: 2px 2px 5px black;
+    margin: 5px;
     background-image: url(museum.jpg);
+    border-radius: 5%;
     background-size: cover;
     width: 33.34%;
     height: 300px;
 }
 
 .sec3 {
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    box-shadow: 2px 2px 5px black;
+    border-radius: 5%;
+    margin: 5px;
     background-image: url(temple.jpg);
     background-size: cover;
     width: 33.34%;
@@ -176,62 +190,74 @@ html {
 
 .sec1 h1 {
     color: white;
+    font-family: 'Bree Serif', serif;
     text-align: center;
     /* margin-top: 130px; */
     text-shadow: 4px 2px 3px black;
+    font-weight: normal;
 }
 
 .sec2 h1 {
     color: white;
+    font-family: 'Bree Serif', serif;
     text-align: center;
     /* margin-top: 130px; */
+    font-weight: normal;
     text-shadow: 4px 2px 3px black;
 }
 
 .sec3 h1 {
     color: white;
+    font-family: 'Bree Serif', serif;
     text-align: center;
+    font-weight: normal;
     /* margin-top: 130px; */
     text-shadow: 4px 2px 3px black;
 }
 
 .sec1 p {
     border: 2px solid black;
+    font-family: 'Titillium Web', sans-serif;
+    border-radius: 5%;
     height: 258px;
-    width: 478px;
+    width: 473px;
     position: absolute;
     color: white;
     opacity: 0;
     text-align: center;
     font-size: 20px;
     background: rgba(0, 0, 0, 0.7);
-    transition: 0.5s;
+    transition: 1s;
 }
 
 .sec2 p {
     border: 2px solid black;
+    font-family: 'Titillium Web', sans-serif;
+    border-radius: 5%;
     height: 258px;
-    width: 480px;
+    width: 473px;
     position: absolute;
     color: white;
     opacity: 0;
     text-align: center;
     font-size: 20px;
     background: rgba(0, 0, 0, 0.7);
-    transition: 0.5s;
+    transition: 1s;
 }
 
 .sec3 p {
     border: 2px solid black;
+    font-family: 'Titillium Web', sans-serif;
+    border-radius: 5%;
     height: 258px;
-    width: 480px;
+    width: 473px;
     position: absolute;
     color: white;
     opacity: 0;
     text-align: center;
     font-size: 20px;
     background: rgba(0, 0, 0, 0.7);
-    transition: 0.5s;
+    transition: 1s;
 }
 
 .sec1 p:hover {
@@ -244,4 +270,45 @@ html {
 
 .sec3 p:hover {
     opacity: 1;
+}
+
+.sec button {
+    color: white;
+    position: absolute;
+    margin-top: 30px;
+    outline: none;
+    border: 3px solid rgb(199, 194, 194);
+    left: 40px;
+    font-size: 25px;
+    padding: 7px;
+    background-color: orange;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.sec button:hover {
+    border-radius: 20%;
+    color: orange;
+    background-color: white;
+}
+
+#map {
+    box-shadow: 5px 2px 5px black;
+    margin: 60px;
+    margin-top: 0px;
+    margin-left: 4%;
+}
+
+#locate {
+    /* border: 2px solid black; */
+    width: 200px;
+    height: 200px;
+    color: rgb(0, 93, 146);
+    margin-bottom: 50px;
+}
+
+.b {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
