--- a/index.css
+++ b/index.css
@@ -429,3 +429,7 @@
         margin-left: 50px;
         font-family: 'Prompt', sans-serif;
     }
+    
+    .subscribe h1 {
+        text-align: center;
+    }
