--- a/index.css
+++ b/index.css
@@ -542,3 +542,25 @@ html {
     margin-bottom: 0;
     margin-left: 0;
 }
+
+.icon {
+    color: white;
+    position: absolute;
+    margin-top: -140px;
+    margin-left: 80px;
+}
+
+.icons {
+    border: 3px solid white;
+    padding: 15px;
+    margin: 35px;
+    cursor: pointer;
+    margin-top: 0;
+    margin-left: 0;
+    margin-bottom: 0;
+    font-size: 40px;
+}
+
+.icons :hover {
+    color: rgb(0, 140, 255);
+}
