--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dekko&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 html {
     scroll-behavior: smooth;
 }
@@ -32,7 +33,7 @@ html {
 }
 
 .nav {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: black;
     width: 100%;
     padding: 2px;
     position: fixed;
@@ -388,6 +389,7 @@ html {
     width: 100%;
     height: 400px;
     background-color: rgb(0, 0, 0);
+    margin-bottom: 0;
 }
 
 .form input {
@@ -564,4 +566,82 @@ html {
 .icon :hover {
     color: rgb(0, 0, 0);
     background-color: white;
+}
+
+.blog {
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 30%;
+    text-align: center;
+}
+
+.formm input {
+    display: block;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 8px;
+    outline: none;
+    font-size: 20px;
+    border: 3px solid black;
+}
+
+.blog h1 {
+    margin: 30px;
+    font-size: 50px;
+    color: rgb(0, 0, 0);
+    font-family: 'Staatliches', cursive;
+}
+
+.formm textarea {
+    padding: 10px;
+    display: block;
+    font-size: 15px;
+    outline: none;
+    border: 2px solid black;
+}
+
+.formm button {
+    padding: 10px;
+    margin-top: 15px;
+    margin-left: 600px;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    border: 3px solid black;
+}
+
+.formm button:hover {
+    background-color: white;
+    color: black;
+}
+
+.blog-footer {
+    position: absolute;
+    margin-top: 700px;
+}
+
+.about-footer {
+    position: absolute;
+    margin-top: 500px;
+}
+
+.culture-footer {
+    position: absolute;
+    margin-top: 500px;
+}
+
+.dance-footer {
+    position: absolute;
+    margin-top: 600px;
+}
+
+.flora-footer {
+    position: absolute;
+    margin-top: 500px;
+}
+
+.lang-footer {
+    position: absolute;
+    margin-top: 600px;
 }
