--- a/index.css
+++ b/index.css
@@ -645,3 +645,26 @@ html {
     position: absolute;
     margin-top: 600px;
 }
+
+.ul {
+    position: absolute;
+    margin-top: 250px;
+    margin-left: 100px;
+    font-size: 30px;
+}
+
+.ul li {
+    margin: 10px;
+    color: rgb(151, 0, 0);
+    font-weight: bold;
+}
+
+.industries-footer {
+    position: absolute;
+    margin-top: 600px;
+}
+
+.name-footer {
+    position: absolute;
+    margin-top: 750px;
+}
