--- a/index.css
+++ b/index.css
@@ -42,80 +42,26 @@ html {
 
 .mid {
     width: 100%;
-    height: 650px;
-    background: url(bg1.jpg);
+    height: 500px;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), url(bg1.jpg);
     background-size: cover;
     box-shadow: 2px 2px 3px black;
 }
 
-.mid img {
-    width: 700px;
-    position: absolute;
-    margin-left: 500px;
-    animation: img 4s infinite ease-in-out alternate;
-}
-
 .mid h1 {
-    color: white;
-    text-shadow: 2px 2px 5px black;
+    color: rgb(255, 255, 255);
+    font-size: 3.5vw;
+    background-color: rgba(0, 0, 0, 0.644);
+    text-align: center;
+    margin-top: 330px;
     position: absolute;
-    font-size: 70px;
-    margin-left: 80px;
-    overflow: hidden;
-    white-space: nowrap;
-    animation: type 6s linear;
-    font-family: 'Kanit', sans-serif;
-    width: 20ch;
-    margin-top: 100px;
+    width: 100%;
 }
 
-.mid p {
-    font-size: 40px;
-    color: rgb(102, 0, 0);
-    position: absolute;
-    font-family: 'Bebas Neue', cursive;
-    width: 38%;
-    margin-top: 15%;
-    margin-left: 80px;
-    background-color: rgba(255, 165, 80, 0.4);
-}
-
-.mid button {
-    background: none;
-    margin-top: 27%;
-    margin-left: 78px;
-    background-color: rgba(255, 0, 157, 1);
-    padding: 8px;
-    font-size: 30px;
-    color: white;
-    outline: none;
-    border: 3px solid black;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-.mid button:hover {
-    color: rgba(255, 0, 157, 1);
-    background-color: white;
-    border-radius: 50px;
-}
-
-@keyframes type {
-    0% {
-        width: 0;
-    }
-    100% {
-        width: 100%;
-    }
-}
-
-@keyframes img {
-    0% {
-        transform: translate(0px, 0px);
-    }
-    100% {
-        transform: translate(35px, 35px);
-    }
+.mid img {
+    width: 500px;
+    margin-top: 150px;
+    margin-left: 500px;
 }
 
 .name {
