--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dekko&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Staatliches&display=swap');
 html {
     scroll-behavior: smooth;
 }
@@ -59,9 +60,9 @@ html {
 }
 
 .mid img {
-    width: 500px;
-    margin-top: 150px;
-    margin-left: 33vw;
+    width: 310px;
+    margin-top: 70px;
+    margin-left: 37vw;
 }
 
 .name {
@@ -71,7 +72,7 @@ html {
     text-align: center;
     height: 50px;
     color: white;
-    font-family: Copperplate Gothic Bold;
+    font-family: 'Staatliches', cursive;
 }
 
 #about {
